hphp/hack/test/typecheck/reactive/rx_class2.php.exp
File "rx_class2.php", line 2, characters 3-13:
The `__RxShallow` attribute cannot be used on a class. (Typing[4231])
