hphp/hack/test/typecheck/reactive/rx_class2.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__RxShallow>>
interface A {
}
